refactor: made redirect_uri's compatible with the redirect_uri env variable instead of using localhost

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
+# make a new file called .env.local and copy the contents of this file into it
 LAST_FM_API_KEY="CHANGE THIS"
 SPOTIFY_CLIENT_ID="CHANGE THIS"
 SPOTIFY_CLIENT_SECRET="CHANGE THIS"
-# change this if you are using a different callback route
-SPOTIFY_REDIRECT_URI="http://localhost:3000/callback" 
+SPOTIFY_REDIRECT_URI="http://localhost:3000/callback" # change this if you are using a different callback route
